# Soma

./: .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: build-portable.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.tsx  styles.css
frontend/src/components/: CinePlayer.tsx  CropEditor.tsx  NiiVueViewer.tsx  ProgressView.tsx  Uploader.tsx
soma/: config.py  models.py
soma/api/: routes_assets.py  routes_jobs.py  routes_upload.py
soma/jobs/: pipeline.py
soma/processing/: __init__.py  counters.py  frames.py  nifti_writer.py  ocr.py
tests/: test_counters.py  test_ordering.py  test_roi.py
